<resources>
    <string name="app_name">CoreSdkSample</string>
    <string name="link">连接</string>
    <string name="play">播放</string>
    <string name="stop">减帧</string>
    <string name="dislink">加帧</string>
    <string name="rotate">FFC</string>
    <string name="save_pic">校准</string>
    <string name="camera_list">相机列表</string>
    <string name="selected_device_text">相机：</string>
    <string name="writeSDPermission">获取写SD卡权限</string>
    <string name="permissionAllowedOrNo">访问权限已被禁止，是否打开？</string>
</resources>
