<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="cn.com.magnity.coresdksample.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/videoLayout"
        android:layout_width="wrap_content"
        android:layout_height="184dp"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        app:layout_constraintRight_toLeftOf="@+id/btnPlay"
        app:layout_constraintTop_toTopOf="@+id/listDev" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="@+id/btnLink"
        app:layout_constraintLeft_toRightOf="@+id/btnLink"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLink" />

    <Button
        android:id="@+id/btnOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/stop"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        app:layout_constraintRight_toLeftOf="@+id/btnCunrrent"
        app:layout_constraintTop_toBottomOf="@+id/btnLink" />

    <Button
        android:id="@+id/btnCunrrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dislink"
        app:layout_constraintBottom_toBottomOf="@+id/btnOrigin"
        app:layout_constraintLeft_toRightOf="@+id/btnOrigin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnOrigin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnafter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pic"
        app:layout_constraintBottom_toBottomOf="@+id/btnFFC"
        app:layout_constraintLeft_toRightOf="@+id/btnFFC"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnFFC"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginLeft="28dp"
        android:text="@string/camera_list"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="337dp" />

    <Button
        android:id="@+id/btnFFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        app:layout_constraintRight_toLeftOf="@+id/btnafter"
        app:layout_constraintTop_toBottomOf="@+id/btnOrigin" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/selected_device_text"
        app:layout_constraintBottom_toTopOf="@+id/btnLink"
        app:layout_constraintLeft_toRightOf="@+id/listDev"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvSelectedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listDev"
        android:layout_width="161dp"
        android:layout_height="141dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="#ffcccccc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_origin"
        app:layout_constraintVertical_bias="0.733" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/iv_origin"
        android:layout_width="120dp"
        android:layout_height="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoLayout"
        app:srcCompat="@mipmap/xx" />

    <ImageView
        android:id="@+id/iv_FFC"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_origin"
        app:layout_constraintTop_toBottomOf="@+id/videoLayout"
        app:srcCompat="@mipmap/xx" />

    <ImageView
        android:id="@+id/iv_after"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/iv_FFC"
        app:layout_constraintTop_toBottomOf="@+id/videoLayout"
        app:srcCompat="@mipmap/xx" />

    <ImageView
        android:id="@+id/iv_Compare"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/xx"
        tools:layout_editor_absoluteY="351dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="原始数据图"
        android:textColor="#0be721"
        app:layout_constraintStart_toStartOf="@+id/iv_origin"
        app:layout_constraintTop_toTopOf="@+id/iv_origin" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="FFC校准图"
        android:textColor="#0be721"
        app:layout_constraintStart_toStartOf="@+id/iv_FFC"
        app:layout_constraintTop_toTopOf="@+id/iv_FFC" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="校准后的图"
        android:textColor="#0be721"
        app:layout_constraintStart_toStartOf="@+id/iv_after"
        app:layout_constraintTop_toTopOf="@+id/iv_after" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#0be721"
        app:layout_constraintStart_toStartOf="@+id/iv_Compare"
        app:layout_constraintTop_toTopOf="@+id/listDev" />

</android.support.constraint.ConstraintLayout>
